<resources>
    <string name="app_name">E-waste Manager</string>
    <string name="login_logo">Login Logo</string>
    <string name="e_waste_manager">E-Waste Manager</string>
    <string name="hint">hint</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="log_in">Log In</string>
    <string name="reg_username">Username</string>
    <string name="reg_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="by_registering_you_confirm_that_you_accept_our">By registering, you confirm that you accept our</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="reg_register">Register</string>
    <string name="home_button">Home Button</string>
    <string name="post_button">Post Button</string>
    <string name="learn_button">Learn Button</string>
    <string name="btn_menu">btn Menu</string>
    <string name="btn_user">btn User</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="cover">cover</string>
    <string name="learnCover">cover</string>
    <string name="manage_e_waste">Manage E-Waste</string>
    <string name="disposal_area">Disposal Area</string>
    <string name="donate">Donate</string>
    <string name="request">Request</string>
    <string name="back">Back</string>
    <string name="navback">back</string>
    <string name="profile">profile</string>
    <string name="navUsername">Username</string>
    <string name="navEmail">Email</string>
    <string name="body">Body</string>
    <string name="navRightProfile">Profile</string>
    <string name="notification">Notification</string>
    <string name="log_out">Log out</string>
    <string name="partner">Partner</string>
    <string name="e">E</string>
    <string name="todo">TODO</string>
    <string name="to">TODO</string>
    <string name="post">Post...</string>
    <string name="postb">Post</string>
    <string name="upload_learning_materials">Upload Learning Materials</string>
    <string name="tag">Tag</string>
    <string name="content">Content</string>
    <string name="submit">submit</string>
    <string name="upload_image">Upload Image</string>
    <string name="cover_placeholder">cover_placeholder</string>
    <string name="_100">100%</string>
    <string name="upload_learning_material">Upload Learning Material</string>
    <string name="search">Search</string>
    <string name="p">+</string>
    <string name="addbutton">TODO</string>
    <string name="comment">Comment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">time</string>
    <string name="reply">Reply</string>

    <string-array name="barangay_list">
        <item>Aduas Centro (Aduas)</item>
        <item>Aduas Norte</item>
        <item>Aduas Sur</item>
        <item>Bagong Buhay</item>
        <item>Bagong Sikat</item>
        <item>Bakero</item>
        <item>Bakod Bayan</item>
        <item>Balite</item>
        <item>Bangad</item>
        <item>Bantug Bulalo</item>
        <item>Bantug Norte</item>
        <item>Barlis</item>
        <item>Barrera District</item>
        <item>Bernardo District</item>
        <item>Bitas</item>
        <item>Bonifacio District</item>
        <item>Buliran</item>
        <item>Caalibangbangan</item>
        <item>Cabu</item>
        <item>Calawagan</item>
        <item>Campo Tinio</item>
        <item>Caridad</item>
        <item>Caudillo</item>
        <item>Cinco-Cinco</item>
        <item>City Supermarket</item>
        <item>Communal</item>
        <item>Cruz Roja</item>
        <item>Daang Sarile</item>
        <item>Dalampang</item>
        <item>Dicarma</item>
        <item>Dimasalang</item>
        <item>Dionisio S. Garcia</item>
        <item>Fatima</item>
        <item>General Luna</item>
        <item>Hermogenes C. Concepcion, Sr.</item>
        <item>Ibabao Bana</item>
        <item>Imelda District</item>
        <item>Isla</item>
        <item>Kalikid Norte</item>
        <item>Kalikid Sur</item>
        <item>Kapitan Pepe</item>
        <item>Lagare</item>
        <item>Lourdes</item>
        <item>M. S. Garcia</item>
        <item>Mabini Extension</item>
        <item>Mabini Homesite</item>
        <item>Macatbong</item>
        <item>Magsaysay District</item>
        <item>Magsaysay South</item>
        <item>Maria Theresa</item>
        <item>Matadero</item>
        <item>Mayapyap Norte</item>
        <item>Mayapyap Sur</item>
        <item>Melojavilla</item>
        <item>Nabao</item>
        <item>Obrero</item>
        <item>Padre Burgos</item>
        <item>Padre Crisostomo</item>
        <item>Pagas</item>
        <item>Palagay</item>
        <item>Pamaldan</item>
        <item>Pangatian</item>
        <item>Patalac</item>
        <item>Polilio</item>
        <item>Pula</item>
        <item>Quezon District</item>
        <item>Rizdelis</item>
        <item>Samon</item>
        <item>San Isidro</item>
        <item>San Josef Norte</item>
        <item>San Josef Sur</item>
        <item>San Juan Poblacion</item>
        <item>San Roque Norte</item>
        <item>San Roque Sur</item>
        <item>Sanbermicristi</item>
        <item>Sangitan</item>
        <item>Sangitan East</item>
        <item>Santa Arcadia</item>
        <item>Santo Niño</item>
        <item>Sapang</item>
        <item>Sumacab Este</item>
        <item>Sumacab Norte</item>
        <item>Sumacab South</item>
        <item>Talipapa</item>
        <item>Valdefuente</item>
        <item>Valle Cruz</item>
        <item>Vijandre District</item>
        <item>Villa Ofelia-Caridad</item>
        <item>Zulueta District</item>
    </string-array>
    <string name="title_activity_donate_transactions">DonateTransactions</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="orgprof">Organization Profile</string>
    <string name="orgname">Organization Name</string>
    <string name="orgdesc">Description</string>
    <string name="reward_catalog">You will receive an email once the redemption is successful.</string>
    <string name="redeem">Redeem</string>

    <string-array name="donationrecycleropt1">
        <item>All</item>
        <item>Pending</item>
        <item>Ongoing</item>
    </string-array>
    <string-array name="donationrecycleropt2">
        <item>Pickup</item>
        <item>Drop Off</item>
    </string-array>
</resources>