<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="">
        <menu>
        </menu>
    </item>

    <item android:title="@string/manage_e_waste" >
        <menu>
            <item
                android:id="@+id/disposal"
                android:icon="@drawable/ic__maps"
                android:title="@string/disposal_area"/>

            <item
                android:id="@+id/adddisposalpg"
                android:icon="@drawable/ic__pin"
                android:title="Add Disposal Area"
                android:visible="false"/>

            <item
                android:id="@+id/donatetransactionspg"
                android:icon="@drawable/ic__recieveddonation"
                android:title="Donate Transactions"
                android:visible="false"/>

            <item
                android:id="@+id/donate"
                android:icon="@drawable/ic__donate"
                android:title="@string/donate"/>
        </menu>
    </item>

</menu>